--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Clément Bourgoin <c@iwzr.fr>",
   "license": "GNU GPL 3",
   "dependencies": {
+    "fs-extra": "^9.0.1",
     "webpack": "^4.44.1",
     "yaml-loader": "^0.6.0"
   },
