Add html-webpack-plugin module

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "fs-extra": "^9.0.1",
+    "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.44.1",
     "yaml-loader": "^0.6.0"
   },
