--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.44.1",
