--- a/package.json
+++ b/package.json
@@ -11,12 +11,24 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.3.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "webpack": "^4.44.1",
     "yaml": "^1.10.0",
     "yaml-loader": "^0.6.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   },
   "devDependencies": {
     "eslint": "^7.6.0",
