--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "source-map-loader": "^1.0.1",
+    "ts-loader": "^8.0.2",
+    "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "yaml": "^1.10.0",
     "yaml-loader": "^0.6.0"
