--- a/src/template/tsconfig.json
+++ b/src/template/tsconfig.json
@@ -8,7 +8,8 @@
     "target": "es5", // specify ECMAScript target version
     "allowJs": true, // allow a partial TypeScript and JavaScript codebase
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
   "include": ["./**/*.tsx"]
 }
