--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
-    "yaml": "^1.10.0",
-    "yaml-loader": "^0.6.0"
+    "yaml": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
