Add tests for template components (fix #12)

--- a/src/template/tsconfig.json
+++ b/src/template/tsconfig.json
@@ -11,5 +11,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true
   },
-  "include": ["./**/*.tsx"]
+  "include": ["./**/*.tsx"],
+  "exclude": ["node_modules", "./**/*.test.tsx"]
 }
