Change license to MIT (fix #5)

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "repository": "https://github.com/iwazaru/walden",
   "author": "Clément Bourgoin <c@iwzr.fr>",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "bin": {
     "walden": "./bin/walden.js"
   },
