--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^4.2.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.3.0",
+    "live-server": "^1.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "source-map-loader": "^1.0.1",
