--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [10, 12]
+        node: [10, 12, 14]
         os: [ubuntu-latest, macOS-latest]
 
     steps:
