--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "objectmodel": "^4.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "source-map-loader": "^1.0.1",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.2",
