Disable "object-curly-newline" eslint rule

--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
       "react": {
         "version": "detect"
       }
+    },
+    "rules": {
+      "object-curly-newline": "off"
     }
   },
   "jest": {
