--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -11,6 +11,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true
   },
-  "include": ["./**/*.tsx"],
+  "include": ["./src/**/*.tsx"],
   "exclude": ["node_modules", "./**/*.test.tsx"]
 }
