--- a/package.json
+++ b/package.json
@@ -16,11 +16,6 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
@@ -32,10 +27,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "slugify": "^1.4.5",
-    "source-map-loader": "^1.0.1",
     "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "yaml": "^1.10.0"
   },
@@ -43,12 +35,18 @@
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/react": "^10.4.8",
     "@types/jest": "^26.0.9",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "^7.20.5",
     "jest": "^26.2.2",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "typescript": "^3.9.7"
   },
   "prettier": {
     "semi": true,
