Add a build script to compile Typescript template (fix #16)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "format": "prettier . --write",
     "lint": "eslint src",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build": "tsc --build template/"
   },
   "dependencies": {
     "@babel/core": "^7.11.1",
