--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier . --write",
     "lint": "eslint src",
     "test": "jest --watchAll",
-    "build": "tsc --build template/"
+    "build": "tsc --build template/",
+    "prepublishOnly": "yarn lint && yarn test --watchAll=false && yarn build"
   },
   "dependencies": {
     "@babel/core": "^7.11.1",
