Add a yarn dev script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "walden": "./bin/walden.js"
   },
   "scripts": {
+    "dev": "yarn build --watch",
     "format": "prettier . --write",
     "lint": "eslint src",
     "test": "jest --watchAll",
