--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier . --write",
     "lint": "eslint src",
     "test": "jest --watchAll",
-    "build": "tsc --build template/",
+    "build:templates": "tsc --build template/",
+    "build:builder": "tsc --build builder/",
     "prepublishOnly": "yarn lint && yarn test --watchAll=false && yarn build"
   },
   "dependencies": {
@@ -37,10 +38,13 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/react": "^10.4.8",
+    "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.9",
+    "@types/live-server": "^1.2.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/webpack": "^4.41.21",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "eslint": "^7.6.0",
