--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "scripts": {
     "dev": "yarn build --watch",
     "format": "prettier . --write",
-    "lint": "eslint src",
+    "lint": "yarn lint:template && yarn lint:builder",
+    "lint:template": "eslint template/src",
+    "lint:builder": "eslint builder/src",
     "test": "jest --watchAll",
-    "build:templates": "tsc --build template/",
+    "build:template": "tsc --build template/",
     "build:builder": "tsc --build builder/",
     "prepublishOnly": "yarn lint && yarn test --watchAll=false && yarn build"
   },
