--- a/builder/.eslintrc.json
+++ b/builder/.eslintrc.json
@@ -14,7 +14,7 @@
       "error",
       "ignorePackages",
       {
-        "tsx": "never"
+        "ts": "never"
       }
     ],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
