--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:template": "eslint template/src",
     "lint:builder": "eslint builder/src",
     "test": "jest --watchAll",
+    "build": "yarn build:template && yarn build:builder",
     "build:template": "tsc --build template/",
     "build:builder": "tsc --build builder/",
     "prepublishOnly": "yarn lint && yarn test --watchAll=false && yarn build"
