--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "^7.20.5",
     "jest": "^26.3.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.0.5",
     "typescript": "^3.9.7"
   },
