--- a/builder/.eslintrc.json
+++ b/builder/.eslintrc.json
@@ -16,6 +16,7 @@
         "ts": "never"
       }
     ],
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "@typescript-eslint/no-explicit-any": "error"
   }
 }
