--- a/builder/tsconfig.json
+++ b/builder/tsconfig.json
@@ -7,7 +7,15 @@
     "target": "es5", // specify ECMAScript target version
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noImplicitAny": true,
+    "strict": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "./**/*.test.tsx"]
