--- a/template/.eslintrc.json
+++ b/template/.eslintrc.json
@@ -17,6 +17,7 @@
         "tsx": "never"
       }
     ],
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "@typescript-eslint/no-explicit-any": "error"
   }
 }
