--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@types/lunr": "^2.3.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-require-context": "^0.1.1",
     "clean-webpack-plugin": "^3.0.0",
@@ -33,6 +34,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.3.0",
     "live-server": "^1.2.1",
+    "lunr": "^2.3.8",
     "objectmodel": "^4.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
