--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@types/event-hooks-webpack-plugin": "^2.0.0",
     "@types/lunr": "^2.3.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-require-context": "^0.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
+    "event-hooks-webpack-plugin": "^2.1.7",
     "file-loader": "^6.0.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.3.0",
