--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@types/event-hooks-webpack-plugin": "^2.0.0",
+    "@types/extra-watch-webpack-plugin": "^1.0.1",
     "@types/lunr": "^2.3.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-require-context": "^0.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
     "event-hooks-webpack-plugin": "^2.1.7",
+    "extra-watch-webpack-plugin": "^1.0.3",
     "file-loader": "^6.0.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.3.0",
