--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/react": "^11.0.2",
+    "@testing-library/jest-dom": "^5.11.4",
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.13",
     "@types/live-server": "^1.2.0",
@@ -64,6 +65,7 @@
     "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest-dom": "^3.2.2",
     "eslint-plugin-react": "^7.20.6",
     "jest": "^26.4.2",
     "npm-run-all": "^4.1.5",
