--- a/template/.eslintrc.json
+++ b/template/.eslintrc.json
@@ -20,6 +20,8 @@
       }
     ],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "error",
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": "error"
   }
 }
