--- a/builder/tsconfig.json
+++ b/builder/tsconfig.json
@@ -18,6 +18,11 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true
   },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "./**/*.test.tsx"]
+  "include": [
+    "./src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "./**/*.test.ts"
+  ]
 }
