--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/lunr": "^2.3.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-require-context": "^0.1.1",
+    "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "event-hooks-webpack-plugin": "^2.1.7",
