Add react-helmet package

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/event-hooks-webpack-plugin": "^2.0.0",
     "@types/extra-watch-webpack-plugin": "^1.0.1",
     "@types/lunr": "^2.3.3",
+    "@types/react-helmet": "^6.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-require-context": "^0.1.1",
     "chalk": "^4.1.0",
@@ -43,6 +44,7 @@
     "objectmodel": "^4.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "slugify": "^1.4.5",
     "style-loader": "^1.2.1",
