Started working on sitemap

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
+    "sitemap": "^6.3.2",
     "slugify": "^1.4.5",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
