--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest-dom": "^3.2.3",
     "eslint-plugin-react": "^7.20.6",
@@ -91,7 +92,8 @@
     },
     "extends": [
       "airbnb-base",
-      "plugin:react/recommended"
+      "plugin:react/recommended",
+      "prettier"
     ],
     "parserOptions": {
       "ecmaVersion": 11,
