--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.12.1",
+    "@mdx-js/loader": "^1.6.19",
     "@types/event-hooks-webpack-plugin": "^2.0.0",
     "@types/extra-watch-webpack-plugin": "^1.0.1",
     "@types/lunr": "^2.3.3",
@@ -54,6 +55,7 @@
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.13",
     "@types/live-server": "^1.2.0",
+    "@types/mdx-js__react": "^1.5.3",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
@@ -68,6 +70,7 @@
     "eslint-plugin-jest-dom": "^3.2.3",
     "eslint-plugin-react": "^7.20.6",
     "jest": "^26.4.2",
+    "jest-transformer-mdx": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.1.2",
     "typescript": "^4.0.2"
