--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-require-context": "^0.1.1",
     "chalk": "^4.1.0",
+    "chokidar": "^3.4.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "event-hooks-webpack-plugin": "^2.1.7",
