CI: launch all tests without watching and exits after first failure

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,4 +33,4 @@ jobs:
       - name: lint
         run: yarn lint
       - name: test
-        run: yarn test --watchAll=false
+        run: yarn test:all
