--- a/src/template/.eslintrc.json
+++ b/src/template/.eslintrc.json
@@ -22,6 +22,7 @@
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "@typescript-eslint/no-explicit-any": "error",
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error", { "functions": false }]
+    "@typescript-eslint/no-use-before-define": ["error", { "functions": false }],
+    "no-underscore-dangle": ["off"]
   }
 }
