--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "jest": "^26.4.2",
     "jest-transformer-mdx": "^2.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.1.2",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.2"
   },
   "prettier": {
