--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,10 @@
     "allowJs": true // allow a partial TypeScript and JavaScript codebase
   },
   "include": ["types", "./src/builder/**/*.ts", "./src/template/**/*.tsx"],
-  "exclude": ["node_modules", "./**/*.test.ts", "./**/*.test.tsx"]
+  "exclude": [
+    "node_modules",
+    "./**/*.test.ts",
+    "./**/*.test.tsx",
+    "./**/__mocks/*"
+  ]
 }
