build(global): add a CI step to check formatting

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,8 @@ jobs:
           registry-url: https://registry.npmjs.org
       - name: install
         run: yarn install
+      - name: check formatting
+        run: yarn format:check
       - name: lint
         run: yarn lint
       - name: test
