--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.2",
+    "@types/chalk": "^2.2.0",
     "@types/event-hooks-webpack-plugin": "^2.0.0",
     "@types/extra-watch-webpack-plugin": "^1.0.1",
     "@types/fs-extra": "^9.0.1",
